# claude-agent-sdk-skill-autoupdated

./: .gitignore  CHANGELOG.md  README.md  SKILL-python.md  SKILL-typescript.md  SKILL.md
.claude-plugin/: plugin.json
agent/: mending-agent.ts  mending-prompt.md  monitor.sh  package.json  report-agent.ts  report-prompt.md  research-agent-py.ts  research-agent-ts.ts  research-agent.ts  research-prompt-py.md  research-prompt-ts.md  research-prompt.md  research-report-2026-02-15.md  state.json  system-prompt.md  tsconfig.json  update-agent.ts  verify.sh
reports/: 2026-02-09.md  2026-02-11.md  2026-02-12.md  2026-02-13.md  2026-02-14.md  2026-02-15.md  2026-02-16.md  2026-02-17.md  2026-02-18.md  2026-02-19.md  2026-02-20.md  2026-02-21.md  2026-02-22.md  2026-02-23.md  2026-02-26.md  2026-02-27.md  2026-02-28.md  2026-03-01.md  2026-03-02.md  2026-03-06.md  2026-03-07.md  2026-03-08.md  2026-03-09.md  2026-03-10.md  2026-03-11.md  2026-03-12.md  2026-03-13.md  2026-03-14.md  2026-03-15.md  2026-03-16.md  2026-03-17.md  2026-03-18.md  2026-03-19.md  2026-03-20.md  2026-03-21.md  2026-03-22.md  2026-03-23.md  2026-03-24.md  2026-03-25.md  2026-03-26.md  (+4 more)
rules/: claude-agent-sdk-py.md  claude-agent-sdk-ts.md  claude-agent-sdk.md
scripts/: check-versions.sh  typecheck-templates.sh
templates/python/: basic_query.py  client_conversation.py  custom_mcp_server.py  error_handling.py  hooks_example.py  multi_agent_workflow.py  permission_control.py  pyproject.toml  query_with_tools.py  sandbox_config.py  session_management.py  structured_output.py  subagents_orchestration.py
(+16 files in other folders)
