[project]
name = "claude-agent-sdk-examples"
version = "1.0.0"
description = "Claude Agent SDK (Python) usage examples"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.44",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
